2006-01-09 Chris Kelly <ckdake@ckdake.com> 1.5.2-RC2

 * Release: 1.5.2-RC2

2006-01-09 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b16

 * Change: "pimp my code" in lib/imageManipulation.php
   - Use separate internal var $stripProfiles instead of override $keepProfiles
   - Use technically correct escaping in regexp. Thanks to Pelle.
   - Use execwrapper instead of exex_internal.

2006-01-09 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b15

 * Fix: "Set as highlight" for subalbums were broken in 1.5.2-RC2-CVS-b6
   Thanks to mastrboy from forum.

2006-01-08 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b14

 * FIX: rar cmdline tool can only handle RAR.
	- NOT handled: 'cab', 'arj', 'lzh', 'tar', 'gz', 'bz2', 'ace', 'uue', 'jar', 'z'
	- Adjust text in upload form.

 * Fix: Supported archives were not showed in selected box for url upload.

 * Fix: AcceptableArchive() should be acceptableArchive()

 * Fix: Dont extract content of rar archives with full path.
        The results in problems when content files have spaces.

 * Fix: Use of gTranslate in layout/adminAlbumCommands.inc

 * Change: Added a lot more debugmessages (sorry translators)

 * Change: Some layout regarding to upload process.

2006-01-06 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b13

 * Fix: getLanguageAlias() was buggy,
	but appeared only in some environtments in combination with Joomla! and/or Mambo.

2006-01-06 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b12

 * Update Copyright to 2006.

2006-01-05 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b11

 * Fix: When Magic quotes are on and Gallery runs on Windows,
        \ in pathes was erased by stripslashes.

2006-01-04 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b10

  * Fix: Adapted init.php to fit with phpBB2 2.0.19

  * Changed: Removed phpBB2 Patch, as it only would fit for a couple Versions.

2006-01-01 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b9

  * Fix: Bug #1379746 ] search.php wrongly matches albums

2005-12-31 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b8
